# AI-ScrumBot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: channels.yaml  mcp_servers.yaml  prompts.py
scrumbot/: __init__.py  agent.py  app.py  config.py  llm.py  prompts.py  queue.py  skills.py  tools.py  webhooks.py
scrumbot/custom_backend/: __init__.py  client.py  sync.py  tools.py
scrumbot/data/: __init__.py  chroma.py  collector.py
scrumbot/discord/: __init__.py  bot.py  dispatcher.py  embeds.py  events.py  scheduler.py  views.py
scrumbot/mcp_server/: __init__.py  __main__.py  server.py
tests/: test_config.py  test_llm.py  test_queue.py  test_sync.py
