[project]
name = "scrumbot"
version = "3.0.0"
description = "AI-powered Scrum Master agent with DevOpsBackend and MCP integration"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
dependencies = [
    # Core Framework
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    
    # LangGraph
    "langgraph>=0.1.0",
    "langgraph-checkpoint-mongodb>=0.1.0",
    
    # MCP Integration
    "langchain-mcp-adapters>=0.1.0",
    "langchain-taiga>=1.8.1",
    
    # Discord Bot
    "discord.py>=2.4.0",
    
    # Web Tools
    "duckduckgo-search>=6.0.0",
    "arxiv>=2.1.0",
    "wikipedia>=1.4.0",
    
    # Storage
    "pymongo>=4.6.0",
    "chromadb>=0.5.0",
    
    # Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.7.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
