[project]
name = "scrumbot"
version = "3.0.0"
description = "AI-powered Scrum Master agent with DevOps board and MCP integration"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
dependencies = [
    # --- LangChain / LangGraph ---
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-ollama>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-mongodb>=0.1.0",

    # --- MCP ---
    "fastmcp>=2.8.0",

    # --- Discord bot ---
    "discord.py>=2.4.0",

    # --- Web research tools ---
    "duckduckgo-search>=6.0.0",
    "arxiv>=2.1.0",
    "wikipedia>=1.4.0",

    # --- Vector store / local embeddings ---
    "chromadb>=0.5.0",
    "fastembed>=0.3.0",

    # --- Agent memory ---
    "pymongo>=4.6.0",

    # --- HTTP client + webhook receiver ---
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",

    # --- Config / utilities ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
# Optional Taiga integration (legacy external MCP tool).
taiga = [
    "langchain-taiga>=1.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scrumbot"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
